# temp_control

./: CMakeLists.txt
resources/ui/: README.md
resources/views/: menu.json  menu_system.json  temperature_sensors.json
src/: App.cpp  App.h  Debug.h  ScreenSensor.cpp  ScreenSensor.h  SensorUpdater.cpp  SensorUpdater.h  SystemMenu.cpp  SystemMenu.h  SystemMenuLogic.cpp  SystemMenuLogic.h  main.cpp
